Reintegrate Firebase Crashlytics and Analytics

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,5 +15,6 @@ org.gradle.caching=true
 org.gradle.java.installations.fromEnv=JAVA_HOME
 org.gradle.jvmargs=-Xmx1536M -Dkotlin.daemon.jvm.options\="-Xmx1536M"
 org.gradle.unsafe.configuration-cache=true
+android.enableVcsInfo=true
 android.useAndroidX=true
 kapt.include.compile.classpath=false
