--- a/detekt.yml
+++ b/detekt.yml
@@ -160,11 +160,11 @@ complexity:
   TooManyFunctions:
     active: true
     excludes: [ '**/test/**', '**/androidTest/**', '**/commonTest/**', '**/jvmTest/**', '**/jsTest/**', '**/iosTest/**' ]
-    thresholdInFiles: 11
-    thresholdInClasses: 11
-    thresholdInInterfaces: 11
-    thresholdInObjects: 11
-    thresholdInEnums: 11
+    thresholdInFiles: 15
+    thresholdInClasses: 15
+    thresholdInInterfaces: 15
+    thresholdInObjects: 15
+    thresholdInEnums: 15
     ignoreDeprecated: false
     ignorePrivate: false
     ignoreOverridden: false
@@ -576,7 +576,7 @@ style:
     ignoreLocalVariableDeclaration: false
     ignoreConstantDeclaration: true
     ignoreCompanionObjectPropertyDeclaration: true
-    ignoreAnnotated: [ 'Preview', 'ThemePreviews', 'WindowSizePreviews' ]
+    ignoreAnnotated: [ 'Preview', 'PreviewLightDark', 'PreviewFontScale', 'PreviewScreenSizes' ]
     ignoreAnnotation: false
     ignoreNamedArgument: true
     ignoreEnums: false
@@ -677,7 +677,7 @@ style:
   UnusedPrivateMember:
     active: true
     allowedNames: '(_|ignored|expected|serialVersionUID)'
-    ignoreAnnotated: [ 'Preview', 'ThemePreviews', 'WindowSizePreviews' ]
+    ignoreAnnotated: [ 'Preview', 'PreviewLightDark', 'PreviewFontScale', 'PreviewScreenSizes' ]
   UseAnyOrNoneInsteadOfFind:
     active: true
   UseArrayLiteralsInAnnotations:
