--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ androidx-activity-compose = "1.7.2"
 androidx-compose-bom = "2023.08.00"
 androidx-compose-compiler = "1.5.2"
 androidx-compose-material3 = "1.2.0-alpha06"
+androidx-compose-ui = "1.6.0-alpha05"
 androidx-constraint-layout-compose = "1.0.1"
 androidx-core = "1.10.1"
 androidx-data-store = "1.1.0-alpha04"
@@ -67,7 +68,8 @@ androidx-compose-material-icons-extended = { module = "androidx.compose.material
 androidx-compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "androidx-compose-material3" }
 androidx-compose-material3-windowSizeClass = { module = "androidx.compose.material3:material3-window-size-class", version.ref = "androidx-compose-material3" }
 androidx-compose-uiTest-junit4 = { module = "androidx.compose.ui:ui-test-junit4" }
-androidx-compose-uiTooling = { module = "androidx.compose.ui:ui-tooling" }
+androidx-compose-uiTooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "androidx-compose-ui" }
+androidx-compose-uiTooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "androidx-compose-ui" }
 androidx-constraintLayout-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version.ref = "androidx-constraint-layout-compose" }
 androidx-core = { module = "androidx.core:core", version.ref = "androidx-core" }
 androidx-dataStore = { module = "androidx.datastore:datastore", version.ref = "androidx-data-store" }
