Update a bunch of dependencies

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 accompanist = "0.32.0"
-android-desugarJdkLibs = "2.0.3"
+android-desugarJdkLibs = "2.0.4"
 android-gradle = "8.2.0-rc02"
 android-sdk-compile = "34"
 android-sdk-min = "21"
@@ -8,20 +8,20 @@ android-sdk-target = "34"
 androidx-activity = "1.8.0"
 androidx-activity-compose = "1.8.0"
 androidx-compose-bom = "2023.10.01"
-androidx-compose-compiler = "1.5.3"
+androidx-compose-compiler = "1.5.4"
 androidx-compose-material3 = "1.2.0-alpha10"
 androidx-compose-ui = "1.6.0-alpha08"
 androidx-constraint-layout-compose = "1.0.1"
 androidx-core = "1.12.0"
-androidx-data-store = "1.1.0-alpha04"
-androidx-fragment = "1.6.1"
+androidx-data-store = "1.1.0-alpha06"
+androidx-fragment = "1.6.2"
 androidx-hilt = "1.0.0"
 androidx-legacySupport-v4 = "1.0.0"
 androidx-lifecycle = "2.6.2"
-androidx-navigation = "2.7.4"
+androidx-navigation = "2.7.5"
 androidx-preference = "1.2.1"
-androidx-window = "1.2.0-beta04"
-google-firebase-bom = "32.4.0"
+androidx-window = "1.2.0-rc01"
+google-firebase-bom = "32.5.0"
 google-firebase-crashlytics-gradle = "2.9.9"
 google-materialComponents = "1.10.0"
 google-playServices-location = "21.0.1"
@@ -30,13 +30,13 @@ java = "17"
 javapoet = { strictly = "1.13.0" }
 javax-inject = "1"
 hilt = "2.48.1"
-kotest = "5.7.2"
-kotlin = "1.9.10"
+kotest = "5.8.0"
+kotlin = "1.9.20"
 kotlinx-coroutines = "1.7.3"
 kotlinx-datetime = "0.4.1"
 markwon = "4.6.2"
-protobuf = "3.24.2"
-protobuf-plugin = "0.9.3"
+protobuf = "3.25.0"
+protobuf-plugin = "0.9.4"
 sunrise-sunset = "1.2"
 timber = "5.0.1"
 turbine = "1.0.0"
