--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,12 +5,12 @@ android-gradle = "8.2.0-rc03"
 android-sdk-compile = "34"
 android-sdk-min = "21"
 android-sdk-target = "34"
-androidx-activity = "1.8.0"
-androidx-activity-compose = "1.8.0"
+androidx-activity = "1.8.1"
+androidx-activity-compose = "1.8.1"
 androidx-compose-bom = "2023.10.01"
 androidx-compose-compiler = "1.5.4"
-androidx-compose-material3 = "1.2.0-alpha10"
-androidx-compose-ui = "1.6.0-alpha08"
+androidx-compose-material3 = "1.2.0-alpha11"
+androidx-compose-ui = "1.6.0-beta01"
 androidx-constraint-layout-compose = "1.0.1"
 androidx-core = "1.12.0"
 androidx-data-store = "1.1.0-alpha06"
@@ -20,8 +20,8 @@ androidx-legacySupport-v4 = "1.0.0"
 androidx-lifecycle = "2.6.2"
 androidx-navigation = "2.7.5"
 androidx-preference = "1.2.1"
-androidx-window = "1.2.0-rc01"
-google-firebase-bom = "32.5.0"
+androidx-window = "1.2.0"
+google-firebase-bom = "32.6.0"
 google-firebase-crashlytics-gradle = "2.9.9"
 google-materialComponents = "1.10.0"
 google-playServices-location = "21.0.1"
@@ -35,7 +35,7 @@ kotlin = "1.9.20"
 kotlinx-coroutines = "1.7.3"
 kotlinx-datetime = "0.4.1"
 markwon = "4.6.2"
-protobuf = "3.25.0"
+protobuf = "3.25.1"
 protobuf-plugin = "0.9.4"
 sunrise-sunset = "1.2"
 timber = "5.0.1"
