--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ androidx-lifecycle = "2.6.2"
 androidx-navigation = "2.7.5"
 androidx-preference = "1.2.1"
 androidx-window = "1.2.0"
+composePlaceholder = "1.0.7"
 google-firebase-bom = "32.7.0"
 google-firebase-crashlytics-gradle = "2.9.9"
 google-ksp = "1.9.21-1.0.15"
@@ -56,7 +57,6 @@ protobuf = { id = "com.google.protobuf", version.ref = "protobuf-plugin" }
 [libraries]
 accompanist-pager-indicators = { module = "com.google.accompanist:accompanist-pager-indicators", version.ref = "accompanist" }
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanist" }
-accompanist-placeholder = { module = "com.google.accompanist:accompanist-placeholder", version.ref = "accompanist" }
 android-desugarJdkLibs = { module = "com.android.tools:desugar_jdk_libs", version.ref = "android-desugarJdkLibs" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity-compose" }
 androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "androidx-activity" }
@@ -82,6 +82,7 @@ androidx-lifecycle-viewModel-ktx = { module = "androidx.lifecycle:lifecycle-view
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "androidx-navigation" }
 androidx-preference-ktx = { module = "androidx.preference:preference-ktx", version.ref = "androidx-preference" }
 androidx-window = { module = "androidx.window:window", version.ref = "androidx-window" }
+composePlaceholder-material3 = { module = "com.eygraber:compose-placeholder-material3", version.ref = "composePlaceholder" }
 google-firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "google-firebase-bom" }
 google-firebase-analytics = { module = "com.google.firebase:firebase-analytics-ktx" }
 google-firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics-ktx" }
