--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -26,4 +26,4 @@ jobs:
         uses: mikepenz/action-junit-report@v4
         if: success() || failure() # always run even if the previous step fails
         with:
-          report_paths: '**/build/test-results/test/TEST-*.xml'
+          report_paths: '**/build/test-results/**/TEST-*.xml'
