--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,22 +1,13 @@
-# To get started with Dependabot version updates, you'll need to specify which
-# package ecosystems to update and where the package manifests are located.
 # Please see the documentation for all configuration options:
 # https://docs.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
 
 version: 2
 updates:
-  - package-ecosystem: "gradle"
-    directory: "/app"
+  - package-ecosystem: "github-actions"
+    directory: "/"
     schedule:
       interval: "daily"
-    target-branch: "main"
   - package-ecosystem: "gradle"
-    directory: "/domain"
+    directory: "/"
     schedule:
       interval: "daily"
-    target-branch: "main"
-  - package-ecosystem: "gradle"
-    directory: "/data"
-    schedule:
-      interval: "daily"
-    target-branch: "main"
