Update a bunch of dependencies

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,12 +5,12 @@ android-gradle = "8.2.0"
 android-sdk-compile = "34"
 android-sdk-min = "21"
 android-sdk-target = "34"
-androidx-activity = "1.8.1"
-androidx-activity-compose = "1.8.1"
+androidx-activity = "1.8.2"
+androidx-activity-compose = "1.8.2"
 androidx-compose-bom = "2023.10.01"
 androidx-compose-compiler = "1.5.6"
-androidx-compose-material3 = "1.2.0-alpha12"
-androidx-compose-ui = "1.6.0-beta02"
+androidx-compose-material3 = "1.2.0-beta01"
+androidx-compose-ui = "1.6.0-beta03"
 androidx-constraint-layout-compose = "1.0.1"
 androidx-core = "1.12.0"
 androidx-data-store = "1.1.0-alpha07"
@@ -18,20 +18,20 @@ androidx-fragment = "1.6.2"
 androidx-hilt = "1.1.0"
 androidx-legacySupport-v4 = "1.0.0"
 androidx-lifecycle = "2.6.2"
-androidx-navigation = "2.7.5"
+androidx-navigation = "2.7.6"
 androidx-preference = "1.2.1"
 androidx-window = "1.2.0"
 composePlaceholder = "1.0.7"
 google-firebase-bom = "32.7.0"
 google-firebase-crashlytics-gradle = "2.9.9"
 google-ksp = "1.9.21-1.0.15"
-google-materialComponents = "1.10.0"
+google-materialComponents = "1.11.0"
 google-playServices-location = "21.0.1"
 google-services = "4.4.0"
 java = "17"
 javapoet = { strictly = "1.13.0" }
 javax-inject = "1"
-hilt = "2.49"
+hilt = "2.50"
 kotest = "5.8.0"
 kotlin = "1.9.21"
 kotlinx-coroutines = "1.7.3"
