Add Gradle managed test devices

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,4 +16,5 @@ org.gradle.java.installations.fromEnv=JAVA_HOME
 org.gradle.jvmargs=-Xmx1536M -Dkotlin.daemon.jvm.options\="-Xmx1536M"
 org.gradle.unsafe.configuration-cache=true
 android.enableVcsInfo=true
+android.testoptions.manageddevices.emulator.gpu=swiftshader_indirect
 android.useAndroidX=true
