--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,19 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-feature
-        android:name="android.hardware.location"
-        android:required="true" />
-
-    <uses-feature
-        android:name="android.hardware.sensor.accelerometer"
-        android:required="false" />
-
-    <uses-feature
-        android:name="android.hardware.sensor.compass"
-        android:required="false" />
-
     <uses-permission android:name="android.permission.VIBRATE" />
+
+    <uses-permission
+        android:name="android.permission.READ_PHONE_STATE"
+        tools:node="remove" />
 
     <application
         android:name=".PositionalApplication"
