--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,7 +20,8 @@ androidx-legacySupport-v4 = "1.0.0"
 androidx-lifecycle = "2.7.0"
 androidx-navigation = "2.7.7"
 androidx-preference = "1.2.1"
-androidx-test = "1.5.2"
+androidx-test-core = "1.5.0"
+androidx-test-runner = "1.5.2"
 androidx-test-ext-junit = "1.1.5"
 androidx-window = "1.2.0"
 composePlaceholder = "1.0.7"
@@ -91,8 +92,8 @@ androidx-lifecycle-viewModel-ktx = { module = "androidx.lifecycle:lifecycle-view
 androidx-navigation-runtime-ktx = { module = "androidx.navigation:navigation-runtime-ktx", version.ref = "androidx-navigation" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "androidx-navigation" }
 androidx-preference-ktx = { module = "androidx.preference:preference-ktx", version.ref = "androidx-preference" }
-androidx-test-core = { module = "androidx.test:core", version.ref = "androidx-test" }
-androidx-test-runner = { module = "androidx.test:runner", version.ref = "androidx-test" }
+androidx-test-core = { module = "androidx.test:core", version.ref = "androidx-test-core" }
+androidx-test-runner = { module = "androidx.test:runner", version.ref = "androidx-test-runner" }
 androidx-test-ext-junit-ktx = { module = "androidx.test.ext:junit-ktx", version.ref = "androidx-test-ext-junit" }
 androidx-window = { module = "androidx.window:window", version.ref = "androidx-window" }
 composePlaceholder-material3 = { module = "com.eygraber:compose-placeholder-material3", version.ref = "composePlaceholder" }
