--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,6 +33,12 @@ jobs:
       - name: 'Check out the repository'
         uses: actions/checkout@v4
 
+      - name: 'Enable KVM'
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
+
       - name: 'Set up Java'
         uses: actions/setup-java@v4
         with:
