Only test on APIs 21 and 34

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,7 +31,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        api-level: [ 21, 23, 33 ]
+        api-level: [ 21, 34 ]
         target: [ default, google_apis ]
     steps:
       - name: 'Check out the repository'
