Add Kover for test coveragae reports

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -39,6 +39,7 @@ hilt = "2.50"
 kotest = "5.8.0"
 kotlin = "1.9.22"
 kotlinx-coroutines = "1.8.0"
+kotlinx-kover = "0.7.6"
 kotlinx-datetime = "0.5.0"
 markwon = "4.6.2"
 protobuf = "3.25.3"
@@ -59,6 +60,7 @@ google-services = { id = "com.google.gms.google-services", version.ref = "google
 hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+kotlinx-kover = { id = "org.jetbrains.kotlinx.kover", version.ref = "kotlinx-kover" }
 protobuf = { id = "com.google.protobuf", version.ref = "protobuf-plugin" }
 testLogger = { id = "com.adarshr.test-logger", version.ref = "testLogger" }
 
@@ -123,6 +125,7 @@ kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-c
 kotlinx-coroutines-playServices = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-play-services", version.ref = "kotlinx-coroutines" }
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinx-coroutines" }
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
+kotlinx-kover = { module = "org.jetbrains.kotlinx:kover-gradle-plugin", version.ref = "kotlinx-kover" }
 markwon = { module = "io.noties.markwon:core", version.ref = "markwon" }
 protobuf-protoc = { module = "com.google.protobuf:protoc", version.ref = "protobuf" }
 protobuf-java-lite = { module = "com.google.protobuf:protobuf-javalite", version.ref = "protobuf" }
