--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,7 @@ androidx-activity = "1.8.2"
 androidx-activity-compose = "1.8.2"
 androidx-appcompat = "1.6.1"
 androidx-compose-bom = "2024.02.02"
-androidx-compose-compiler = "1.5.9"
+androidx-compose-compiler = "1.5.10"
 androidx-compose-material3 = "1.2.1"
 androidx-compose-ui = "1.6.3"
 androidx-constraint-layout-compose = "1.0.1"
@@ -73,6 +73,7 @@ androidx-activity-compose = { module = "androidx.activity:activity-compose", ver
 androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "androidx-activity" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "androidx-appcompat" }
 androidx-compose-bom = { module = "androidx.compose:compose-bom", version.ref = "androidx-compose-bom" }
+androidx-compose-compiler = { module = "androidx.compose.compiler:compiler", version.ref = "androidx-compose-compiler" }
 androidx-compose-material-icons-core = { module = "androidx.compose.material:material-icons-core" }
 androidx-compose-material-icons-extended = { module = "androidx.compose.material:material-icons-extended" }
 androidx-compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "androidx-compose-material3" }
