--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,6 +24,7 @@ androidx-test-core = "1.5.0"
 androidx-test-runner = "1.5.2"
 androidx-test-ext-junit = "1.1.5"
 androidx-window = "1.2.0"
+autonomous-dependencyAnalysis = "1.30.0"
 composePlaceholder = "1.0.7"
 dagger = "2.51"
 google-firebase-bom = "32.7.3"
@@ -54,6 +55,7 @@ worldwind = "1.4.14"
 [plugins]
 android-application = { id = "com.android.application", version.ref = "android-tools-gradle" }
 android-library = { id = "com.android.library", version.ref = "android-tools-gradle" }
+autonomous-dependencyAnalysis = { id = "com.autonomousapps.dependency-analysis", version.ref = "autonomous-dependencyAnalysis" }
 google-firebase-crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "google-firebase-crashlytics-gradle" }
 google-ksp = { id = "com.google.devtools.ksp", version.ref = "google-ksp" }
 google-services = { id = "com.google.gms.google-services", version.ref = "google-services" }
