Update Gradle configuration cache property name

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,9 +11,9 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 #Wed Apr 28 13:33:58 CDT 2021
 org.gradle.caching=true
+org.gradle.configuration-cache=true
 org.gradle.java.installations.fromEnv=JAVA_HOME
 org.gradle.jvmargs=-Xmx4196M -Dkotlin.daemon.jvm.options\="-Xmx4196M"
 org.gradle.parallel=true
-org.gradle.unsafe.configuration-cache=true
 android.testoptions.manageddevices.emulator.gpu=swiftshader_indirect
 android.useAndroidX=true
