--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 accompanist = "0.34.0"
-android-tools-common = "35.0.0-rc04"
+android-tools-common = "35.0.0"
 android-tools-desugarJdkLibs = "2.0.4"
 android-tools-gradle = "8.6.0-rc01"
 androidx-activity = "1.9.1"
